# celma

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: str_bench.rs  u8_bench.rs  vec_bench.rs
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
bootstrap/src/bootstrap/: first.rs  mod.rs  parser.rs  syntax.rs
bootstrap/test/: lib.rs
bootstrap/tests/: lib.rs
bootstrap/tests/bootstrap/: first_tests.rs  mod.rs
core/: Cargo.toml
core/benches/: array_bench.rs  iter_bench.rs  str_bench.rs  u8_bench.rs  vec_bench.rs
core/examples/: expression.rs
core/src/: lib.rs
core/src/parser/: a_try.rs  and.rs  bind.rs  char.rs  check.rs  core.rs  ff.rs  fmap.rs  lazy.rs  literal.rs  location.rs  lookahead.rs  map.rs  mod.rs  not.rs  option.rs  or.rs  parser.rs  repeat.rs  response.rs  satisfy.rs  specs.rs
core/src/stream/: array_stream.rs  chained_stream.rs  char_stream.rs  end_line.rs  endline.rs  iterator_stream.rs  mod.rs  parser_stream.rs  position.rs  skip_stream.rs  stream.rs  u8_stream.rs  vec_stream.rs
core/tests/: lib.rs
core/tests/parser/: a_try.rs  and.rs  bind.rs  char.rs  check.rs  core.rs  fmap.rs  lazy.rs  literal.rs  location.rs  lookahead.rs  map.rs  mod.rs  not.rs  option.rs  or.rs  repeat.rs
core/tests/stream/: iterator_stream.rs  mod.rs  parser_stream.rs
examples/: expression.rs
extension/: Cargo.toml
extension/src/: lib.rs
extension/src/genlex/: mod.rs  parser.rs  token.rs
extension/tests/: lib.rs
genlex/: Cargo.toml
genlex/src/: parser.rs  token.rs
genlex/tests/: lib.rs
lang/: Cargo.toml  README.md
lang/ast/: Cargo.toml
lang/ast/src/: syntax.rs
lang/src/: lib.rs
lang/src/meta/: first.rs  mod.rs  parser.rs  syntax.rs  token.rs  transpiler.rs
lang/src/parser/: and.rs  bind.rs  chars.rs  check.rs  core.rs  ff.rs  fmap.rs  lazy.rs  literal.rs  location.rs  mod.rs  not.rs  option.rs  or.rs  repeat.rs  satisfy.rs
lang/tests/: lib.rs
lang/tests/meta/: first_test.rs  mod.rs
lang/tests/parser/: celma_parsec_rules_tests.rs  celma_parsec_tests.rs  mod.rs
lang/tests/transpiler/: celma_transpiler_rules_tests.rs  celma_transpiler_tests.rs  mod.rs
lang/v0/ast/: Cargo.toml
lang/v0/ast/src/: syntax.rs
lang/v0/core/: Cargo.toml
lang/v0/core/benches/: array_bench.rs  iter_bench.rs  str_bench.rs
lang/v0/core/examples/: expression.rs
lang/v0/core/src/parser/: a_try.rs  and.rs  bind.rs  char.rs  check.rs  core.rs  lazy.rs  literal.rs  location.rs  mod.rs  not.rs  or.rs  satisfy.rs
lang/v0/core/src/stream/: array_stream.rs  char_stream.rs  end_line.rs  iterator_stream.rs  parser_stream.rs  position.rs
lang/v0/core/tests/parser/: a_try.rs  and.rs  bind.rs  char.rs  check.rs  core.rs  lazy.rs  literal.rs  location.rs  lookahead.rs  mod.rs  not.rs  option.rs  or.rs  repeat.rs
lang/v0/core/tests/stream/: iterator_stream.rs  mod.rs  parser_stream.rs
lang/v0/macro/: Cargo.toml
lang/v0/macro/benches/: http.rs  json.rs
lang/v0/macro/benches/data/: apache_builds.json  request.http
lang/v0/macro/src/: lib.rs
lang/v0/macro/tests/: basic.rs  expression.rs  pipeline.rs  transpiler.rs  transpiler_rules.rs
lang/v0/parser/: Cargo.toml
lang/v0/parser/src/: lib.rs  parser.rs  transpiler.rs
lang/v0/parser/tests/: lib.rs
lang/v0/parser/tests/parser/: celma_parsec_rules_tests.rs  celma_parsec_tests.rs  mod.rs
lang/v0/parser/tests/transpiler/: celma_transpiler_rules_tests.rs  celma_transpiler_tests.rs
lang/v1/ast/: Cargo.toml
lang/v1/ast/src/: syntax.rs
lang/v1/normalizer/: Cargo.toml
lang/v1/normalizer/src/: ast.rs  dgnf.rs  lib.rs
lang/v1/parser/: Cargo.toml
lang/v1/parser/src/: first.rs  lib.rs  parser.rs  token.rs
lang/v1/parser/tests/: first_tests.rs  lib.rs  parser_tests.rs
lang_v0/: Cargo.toml
lang_v0/src/meta/: mod.rs  transpiler.rs
lang_v0/tests/parser/: celma_parsec_rules_tests.rs  celma_parsec_tests.rs
lang_v0/tests/transpiler/: celma_transpiler_rules_tests.rs  celma_transpiler_tests.rs
lang_v1/: Cargo.toml
lang_v1/src/: lib.rs
lang_v1/src/parser/: first.rs  parser.rs
lang_v1/tests/: lib.rs
lang_v1/tests/parser/: first_tests.rs
macro/: Cargo.toml
macro/benches/: json.rs
macro/src/: lib.rs
macro/tests/: lib.rs
macro/tests/lang/: basic.rs  expression.rs  mod.rs  pipeline.rs  transpiler.rs  transpiler_rules.rs
macro/tests/meta/: expression.rs  pipeline.rs  transpiler_rules.rs
meta/: Cargo.toml
meta/src/: lib.rs
meta/src/meta/: mod.rs  parser.rs  syntax.rs  transpiler.rs
meta/src/parser/: mod.rs
meta/tests/: lib.rs
meta/tests/parser/: celma_parsec_rules_tests.rs  celma_parsec_tests.rs  celma_transpiler_tests.rs  meta_language.rs  mod.rs
meta/tests/transpiler/: celma_transpiler_rules_tests.rs  celma_transpiler_tests.rs  mod.rs
plugin/: Cargo.toml
plugin/benches/: json.rs
plugin/benches/data/: data.json
plugin/examples/: celma.rs  json.rs
plugin/src/: lib.rs
plugin/src/parser/: mod.rs
plugin/tests/: lib.rs
plugin/tests/celma/: mod.rs
plugin/tests/meta/: expression.rs  mod.rs  pipeline.rs  transpiler.rs  transpiler_rules.rs
sample/: Cargo.toml
sample/tests/: lib.rs
sample/tests/parser/: and.rs  bind.rs  lazy.rs  literal.rs  mod.rs  repeat.rs
src/parser/: and.rs  bind.rs  char.rs  core.rs  fmap.rs  lazy.rs  literal.rs  mod.rs  monadic.rs  option.rs  or.rs  parser.rs  repeat.rs  response.rs  satisfy.rs
src/stream/: char_stream.rs  stream.rs  u8_stream.rs  vec_stream.rs
tests/parser/: and.rs  bind.rs  core.rs  fmap.rs  mod.rs  monadic.rs  option.rs  or.rs
tests/stream/: parser_stream.rs
