[package]
name = "celma_macro"
version = "0.1.0"
authors = ["d-plaindoux <d.plaindoux@free.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
celma_core = { version = "0.1.0", path = "../core" }
celma_lang = { version = "0.1.0", path = "../lang" }
proc-macro2 = "0.4.30"
quote = "0.6.12"
syn="0.15.35"
bencher = "0.1.5"

[[bench]]
name = "json"
harness = false
