[package]
name = "celma_macro"
version = "0.1.0"
authors = ["d-plaindoux <d.plaindoux@free.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
celma_core = { version = "0.1.0", path = "../core" }
celma_lang = { version = "0.1.0", path = "../lang" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "json"
harness = false
