[package]
name = "celma_macro_v0"
version = "0.1.0"
authors = ["d-plaindoux <d.plaindoux@free.fr>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
celma_core = { version = "0.1.0", path = "../../../core" }
celma_lang_v0 = { version = "0.1.0", path = "../parser" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "json"
harness = false
