[package]
name = "celma_v0_parser"
version = "0.1.0"
authors = ["dplaindoux <d.plaindoux@fungus.fr>"]
edition = "2021"

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"
celma_v0_core = { version = "0.1.0", path = "../core" }
celma_v0_ast = { version = "0.1.0", path = "../ast" }
